# MuseDock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_compatibility.yml
docs/: GITHUB_LABELS.md  RELEASE.md  ROADMAP.md
docs/releases/: v0.1.0.md
src/: App.tsx  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
