[package]
name = "musedock-open"
version = "0.1.0"
description = "MuseDock Open local-first desktop client"
edition = "2021"

[lib]
name = "musedock_open_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "musedock-open"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
futures-util = "0.3"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1.40", features = ["fs"] }
